--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -1,13 +1,6 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
 img {
   max-width: 100%;
   height: auto;
-  vertical-align: middle;
 }
 
 a {
@@ -18,4 +11,12 @@ a {
 body {
   font-family: 'Open Sans', 'Noto Sans TC', sans-serif;
   line-height: 1.5;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin-bottom: 0;
+}
+
+p {
+  margin-bottom: 0;
 }
